2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `unsigned long int' instead of struct `smob_tag'.

	* libpostgres.c (smob_tag): Delete `typedef struct'.
	(pg_conn_tag, pg_result_tag): Use `unsigned long int'.
	(xc_p, xc_box, xr_p, xr_box, init_module): Update references
	to `pg_conn_tag' and `pg_result_tag' to use them directly.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't keep track of `count' for smob/connection/result objects.

	* libpostgres.h (xc_t): Delete member `count'.
	* libpostgres.c (smob_tag): Delete member `count'.
	(xc_mark, xc_free): For GC_PRINT, display `xc' directly.
	(xr_t): Delete member `count'.
	(xr_mark, xr_free): For GC_PRINT, display `xr' directly.
	(make_xr): Don't maintain `count' for result object.
	(pg_connectdb): Likewise, for connection object.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove serial number from connection and result external reps.

	* libpostgres.c (xc_display): Don't output `xc->count' and colon.
	(xr_display): Don't output `xr->count' and colon.
	* doc/guile-pg.twerp (Database Connections, Processing Results):
	Update examples and descriptions to not mention serial numbers.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove `pg-get-connection'.

	* libpostgres.c (pg_get_connection): Delete GH_DEFPROC.
	* doc/guile-pg.twerp (Types Conversion): Define `CONN' in
	example, instead of using `pg-get-connection' on a result.
	(Processing Results): Likewise.  Also,
	remove @twerpdoc for `pg-get-connection'.

2008-07-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Conditionalize `pg_encoding_to_char' decl; make its retval `const'.

	Reported by Hans Ruschinski <hans.ruschinski@gmail.com>.

	* configure.in (pg_encoding_to_char): New AC_CHECK_DECLS.
	* libpostgres.c (pg_encoding_to_char): Add `const' to retval
	of this decl; surround w/ `#if !HAVE_DECL_PG_ENCODING_TO_CHAR'.

2008-05-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.37 (tag v0.37)
